--- a/src/css/en.css
+++ b/src/css/en.css
@@ -1,3 +1,13 @@
 .quote-mark {
     margin: 6rem 0 2rem 0;
 }
+
+@media only screen and (min-width:800px) {
+    .quote-mark {
+        margin: 0 0 25px 0;
+    }
+
+    .donor-quote .quote-mark {
+        margin-top: 80px !important;
+    }
+}
