--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -82,7 +82,7 @@ h2 {
 
 h3 {
     color: var(--color-1);
-    font-size: 1.8rem;
+    font-size: 2rem;
     font-weight: 200;
     padding: 0;
     margin: 12px 0 0 0;
@@ -135,12 +135,11 @@ header p {
     padding: 0;
     margin: 0;
 }
-header p a {
+header a, header a:visited {
     color: white;
     font-weight: 400;
     text-decoration: none;
 }
-
 
 .title-box {
     position: absolute;
@@ -188,7 +187,9 @@ padding: 0;
     max-width: var(--max-width);
     overflow-x: hidden;
     margin-bottom: 60px;
+
 }
+
 
 .lines-container {
     width: 250vw;
@@ -199,6 +200,7 @@ padding: 0;
     animation-delay: 1050ms;
     background-color:var(--color-1);
 }
+
 
 
 .arrow-container {
@@ -282,8 +284,6 @@ padding: 0;
     background-color: var(--color-1);
     padding: var(--standard-padding);
     max-width: var(--max-width);
-    height: 135vw;
-
 
 }
 
@@ -635,7 +635,7 @@ padding: 0;
     border-right: solid 1px white;
     min-width: 300px;
     max-width: 300px;
-    max-height: 120px;
+    max-height: 180px;
 }
 .item.long {
     min-width: 325px !important;
@@ -736,7 +736,7 @@ footer h2 {
 }
 
 
-footer a {
+footer a, footer a:visited {
     text-decoration: underline;
     color: white;
 }
@@ -790,7 +790,7 @@ footer h3 {
 
 }
 
-@media only screen and (min-width:800px) {
+@media only screen and (min-width:1024px) {
     :root {
         --max-width: 1024px;
         --standard-padding: 80px;  
@@ -806,12 +806,28 @@ footer h3 {
         background-color: var(--color-1);
         padding: 0 60px;
     }
+    @keyframes arrows {
+    to {
+        right: -152px
+    }
+}
+
+    .arrows-container {
+        position: relative;
+        right: -1200px;
+        margin: 200px 0 60px;
+        animation: arrows 1.4s linear forwards 1;
+
+    }
+
+
+    .arrows-container img {
+        width: 90%;
+    }
     .wide-content {
         padding-right: 35%;
     }
-    /* .message-box {
-        outline: 1px solid pink;
-    } */
+
     .message-box img {
         width: 45%;
 
@@ -931,61 +947,7 @@ footer h3 {
         position: relative;
         display: inline-block;
     } 
-    .disease {
-        bottom: 85px;
-        left: 170px;
-    }
-    .indig {
-        bottom: 143px;
-        left: -115px;  
-    }
-    .corp {
-        bottom: 199px;
-        text-align: left;
-        left: -120px;
 
-    }
-    .inst {
-        bottom: 245px;
-        text-align: left;
-        left: -415px;  
-    } 
-    .found {
-        bottom: 300px;
-        text-align: left;
-        left: -378px;  
-    }
-    .nation {
-        bottom: 458px;
-        left: 70px;  
-    } 
-    .prov {
-        bottom: 514px;
-        left: -125px;  
-    } 
-    .pharma {
-        bottom: 575px;
-        text-align: left;
-        left: -42px;
-    }
-    .stake {
-        bottom: 626px;
-        text-align: left;
-        left: -182px;
-    }
-    .eco {
-        bottom: 681px;
-        text-align: left;
-        left: -185px;
-    }
-
-
-    .approach-arrow {
-        top: -407px;
-        left: 92px;
-        rotate: -90deg;
-
-    }
     
 
 
@@ -1029,7 +991,6 @@ footer h3 {
         position: relative;
         left: -51px;
     }
-
 
 
 
